--- a/Vulnerable_system/public/index.html
+++ b/Vulnerable_system/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Gestione Dati Personali</h1>
+        <h1>Vulnerable system</h1>
         
         <div id="login">
             <h2>Login</h2>
